  number of skipped traps.  Thanks to Andrew Choo for the code.
- Fixed a Perl warning issue with syslog logging.
- Varbind types Gauge32 and Hex-STRING now have the 'Gauge32: ' and
  'Hex-STRING: ' text removed for incoming traps in snmptthandler-embedded
  along with unicode line endings (Perl 5.10 and higher).  Thanks to Andrew
  Choo for the code.

March 29th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.5beta2
- Add support for glob (wildcard) for snmptt.conf file list.  Thanks to
  Andrew Choo for the code.

March 25th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.5beta1 for release

March 21st, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Changed net_snmp_perl_best_guess default from 0 to 2 as any modern system
  should support this.

March 20th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Added support for IPv6.  Feature must be enabled by setting ipv6enable = 1 in
  snmptt.ini.
- Changed Perl module for DNS support from Socket to IO::Socket::IP and from
  functions aton/ntoa to getaddrinfo/getnameinfo to support IPv6.
- Fixed a bug where DNS resolution was not working for enterprise variables
  when net_snmp_perl_enable was disabled.

March 13th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Used PerlCritic to check all source files.
- Changed open() calls from two arguments to three.
- Replace Perl bare words with variables.
- Enabled Perl warnings.

March 11th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Replaced Perl smartmatch as it's not considered experiemental.

March 10th, 2021: Alex Burger <alex_b@users.sourceforge.net>
- Fix bug in readtrap function where it was not properly removing quotes
  around strings.  If string happened to only have a starting quote, or would
  remove it and the last character of the string.
- Fixed bug with debug mode that was causing some debug mode output even when
  debug mode was off.
