@@ -210,6 +210,7 @@ my $duplicate_trap_window;
 # Logging
 my $stdout_enable;
 my $log_enable;
+my $log_key_names;
 my $log_file;
 my $log_system_enable;
 my $log_system_file;
@@ -218,6 +219,12 @@ my $unknown_trap_log_file;
 my $unknown_trap_nodes_match_mode;
 my $statistics_interval;
 my $syslog_enable;
+my $syslog_module;
+my $syslog_remote_dest;
+my $syslog_remote_port;
+my $syslog_remote_proto;
+my $syslog_app;
+my $syslog_rfc_format;
 my $syslog_facility;
 my @syslog_level_alert;
 my @syslog_level_crit;
@@ -228,6 +235,7 @@ my @syslog_level_info;
 my @syslog_level_debug;
 my $syslog_level;
 my $syslog_system_enable;
+my $syslog_system_app;
 my $syslog_system_facility;
 my $syslog_system_level;
 my $eventlog_enable;
@@ -368,17 +376,44 @@ if ($threads_enable == 1)
 
 if ($syslog_enable == 1 || $syslog_system_enable == 1)
 {
-  eval 'require Sys::Syslog;';
-  if ($@) {
-    warn $@;
-    print "\nCould not load Perl module Sys::Syslog!  If syslog_system_enable or\n";
-    print "syslog_enable is enabled then the Sys::Syslog module is required.  Please\n";
-    print "see snmptt.html for system requirements.\n\n";
-    die "died";
+  if ($syslog_module == 0) {
+    eval 'require Sys::Syslog;';
+    if ($@) {
+      warn $@;
+      print "\nCould not load Perl module Sys::Syslog!  If syslog_system_enable or\n";
+      print "syslog_enable is enabled then the Sys::Syslog module is required.  Please\n";
+      print "see snmptt.html for system requirements.\n\n";
+      die "died";
+    }
+    require Sys::Syslog;
   }
-  require Sys::Syslog;
+  else {
+    eval 'require Log::Syslog::Fast;';
+    if ($@) {
+      warn $@;
+      print "\nCould not load Perl module Log::Syslog::Fast!  If syslog_system_enable or\n";
+      print "syslog_enable is enabled then the Log::Syslog::Fast module is required.  Please\n";
+      print "see snmptt.html for system requirements.\n\n";
+      die "died";
+    }
+    BEGIN {
+      require Log::Syslog::Fast;
+      Log::Syslog::Fast->import( qw(:all) );
+    }
+    eval 'require Log::Syslog::Constants;';
+    if ($@) {
+      warn $@;
+      print "\nCould not load Perl module Log::Syslog::Constants!  If syslog_system_enable or\n";
+      print "syslog_enable is enabled then the LLog::Syslog::Constants module is required.  Please\n";
+      print "see snmptt.html for system requirements.\n\n";
+      die "died";
+    }
+    BEGIN {
+      require Log::Syslog::Constants;
+      Log::Syslog::Constants->import( qw(:functions) );
+    }
+  }
 }
-
 
 # Win32 constants not available when using 'require' (!)
 my $eventlog_error = 1;		# EVENTLOG_ERROR_TYPE
@@ -1819,7 +1854,12 @@ sub processtrap
 
         $message_short = $_;
 
-        $message = "$receivedtrap_trans $event2[2] \"$event2[1]\" $agent_dns_name - $message_short\n";
+        if ($log_key_names == 0) {
+          $message = "$receivedtrap_trans $event2[2] \"$event2[1]\" $agent_dns_name - $message_short\n";
+        }
+        else {
+          $message = "Trap-OID=$receivedtrap_trans Severity=$event2[2] Category=\"$event2[1]\" Hostname=$agent_dns_name - $message_short\n";
+        }
 
         if ($stdout_enable == 1)
         {
@@ -1873,8 +1913,10 @@ sub processtrap
           $trap_attempted_to_log++;
 
           my $syslog_level_temp = 99;
-          #my $temp;
 
+          # $event2[2] = severity of trap definition snmptt.conf 
+          # Sys::Syslog accepts severities with or without LOG_ and in upper and lower case.  These are valid:  info, iNFo, LOG_INFO, Log_Info.
+          # Log::Syslog::Fast requires constants or the use of get_facility() from Log::Syslog::Constants so that we can use 'iNFo' etc.
           foreach my $temp (@syslog_level_debug)
           {
             if (lc($event2[2]) eq lc($temp)) { $syslog_level_temp = 'debug' }
@@ -1909,17 +1951,39 @@ sub processtrap
             $syslog_level_temp = $syslog_level;
           }
 
-          eval {
-            if (Sys::Syslog::openlog('snmptt', 'pid',$syslog_facility) )
-            {
-              Sys::Syslog::syslog ($syslog_level_temp, "%s", $message);
-              Sys::Syslog::closelog();
-              $trap_successfully_logged++;
-            }
-          };
-          warn "Cannot write to syslog: $@\n" if $@;
+          if ($syslog_module == 0) {  # Sys::Syslog
+            eval {
+              if (Sys::Syslog::openlog('snmptt', 'pid',$syslog_facility) )
+              {
+                Sys::Syslog::syslog ($syslog_level_temp, "%s", $message);
+                Sys::Syslog::closelog();
+                $trap_successfully_logged++;
+              }
+            };
+            warn "Cannot write to syslog: $@\n" if $@;
+          }
+          else {  # Log::Syslog::Fast
+            my $protocol = ($syslog_remote_proto eq "UDP" ? LOG_UDP : LOG_TCP);
+            eval {
+              if (my $logger = Log::Syslog::Fast->new($protocol, $syslog_remote_dest, $syslog_remote_port, get_facility($syslog_facility), 
+                get_severity($syslog_level_temp), $agent_dns_name, $syslog_app))
+              {
+                if ($syslog_rfc_format == 1) {
+                  $logger->set_format(LOG_RFC3164_LOCAL);
+                }
+                elsif ($syslog_rfc_format == 2) {
+                  $logger->set_format(LOG_RFC5424);
+                }
+                else {
+                  $logger->set_format(LOG_RFC3164);
+                }
+                $logger->send($message);
+                $trap_successfully_logged++;
+              }
+            };
+            warn "Cannot write to syslog: $@\n" if $@;
+          }
         }
-
         if ($eventlog_enable == 1)
         {
           $trap_attempted_to_log++;
@@ -4431,6 +4495,7 @@ sub loadsnmpttini {
   # Logging
   $stdout_enable = $cfg->val('Logging', 'stdout_enable');
   $log_enable = $cfg->val('Logging', 'log_enable');
+  $log_key_names = $cfg->val('Logging', 'log_key_names');
   $log_file = $cfg->val('Logging', 'log_file');
   $log_system_enable = $cfg->val('Logging', 'log_system_enable');
   $log_system_file = $cfg->val('Logging', 'log_system_file');
@@ -4439,6 +4504,12 @@ sub loadsnmpttini {
   $unknown_trap_nodes_match_mode = $cfg->val('Logging', 'unknown_trap_nodes_match_mode');
   $statistics_interval = $cfg->val('Logging', 'statistics_interval');
   $syslog_enable = $cfg->val('Logging', 'syslog_enable');
+  $syslog_module = $cfg->val('Logging', 'syslog_module');
+  $syslog_remote_dest = $cfg->val('Logging', 'syslog_remote_dest');
+  $syslog_remote_port = $cfg->val('Logging', 'syslog_remote_port');
+  $syslog_remote_proto = $cfg->val('Logging', 'syslog_remote_proto');
+  $syslog_app = $cfg->val('Logging', 'syslog_app');
+  $syslog_rfc_format = $cfg->val('Logging', 'syslog_rfc_format');
   $syslog_facility = $cfg->val('Logging', 'syslog_facility');
   @syslog_level_alert = $cfg->val('Logging', 'syslog_level_alert');
   @syslog_level_crit = $cfg->val('Logging', 'syslog_level_crit');
@@ -4449,6 +4520,7 @@ sub loadsnmpttini {
   @syslog_level_debug = $cfg->val('Logging', 'syslog_level_debug');
   $syslog_level = $cfg->val('Logging', 'syslog_level');
   $syslog_system_enable = $cfg->val('Logging', 'syslog_system_enable');
+  $syslog_system_app = $cfg->val('Logging', 'syslog_system_app');
   $syslog_system_facility = $cfg->val('Logging', 'syslog_system_facility');
   $syslog_system_level = $cfg->val('Logging', 'syslog_system_level');
   $eventlog_enable = $cfg->val('Logging', 'eventlog_enable');
@@ -4578,6 +4650,7 @@ sub loadsnmpttini {
 
   if (! defined ($stdout_enable)) { $stdout_enable = 0} ;
   if (! defined ($log_enable)) { $log_enable = 1} ;
+  if (! defined ($log_key_names)) { $log_key_names = 0} ;
   if (! defined ($log_file)) { $log_file = ''} ;
   if (! defined ($log_system_enable)) { $log_system_enable = 0} ;
   if (! defined ($log_system_file)) { $log_system_file = ''} ;
@@ -4585,10 +4658,17 @@ sub loadsnmpttini {
   if (! defined ($unknown_trap_log_file)) { $unknown_trap_log_file = ''} ;
   if (! defined ($unknown_trap_nodes_match_mode)) { $unknown_trap_nodes_match_mode = 0} ;
   if (! defined ($syslog_enable)) { $syslog_enable = 0} ;
+  if (! defined ($syslog_module)) { $syslog_module = 0} ;
+  if (! defined ($syslog_remote_dest)) { $syslog_remote_dest = "localhost"} ;
+  if (! defined ($syslog_remote_port)) { $syslog_remote_port = 514} ;
+  if (! defined ($syslog_remote_proto)) { $syslog_remote_proto = 'UDP'} ;
+  if (! defined ($syslog_app)) { $syslog_app = "snmptt"} ;
+  if (! defined ($syslog_rfc_format)) { $syslog_rfc_format = 0} ;
   if (! defined ($syslog_facility)) { $syslog_facility = 'local0'} ;
   if (! defined ($statistics_interval)) { $statistics_interval = 0} ;
   if (! defined ($syslog_level)) { $syslog_level = 'warning'} ;
   if (! defined ($syslog_system_enable)) { $syslog_system_enable = 0} ;
+  if (! defined ($syslog_system_app)) { $syslog_system_app = 'snmptt-sys'} ;
   if (! defined ($syslog_system_facility)) { $syslog_system_facility = 'local0'} ;
   if (! defined ($syslog_system_level)) { $syslog_system_level = 'warning'} ;
   if (! defined ($eventlog_enable)) { $eventlog_enable = 0} ;
@@ -4688,16 +4768,38 @@ sub signal_handler_die {
 
 sub syslog_system {
   my $message = $_[0];
-  eval {
-    if (Sys::Syslog::openlog('snmptt-sys','pid',$syslog_system_facility) )
-    {
-      Sys::Syslog::syslog ($syslog_system_level, "%s", $message);
-      Sys::Syslog::closelog();
+  if ($syslog_module == 0) {  # Sys::Syslog
+    eval {
+      if (Sys::Syslog::openlog('snmptt-sys','pid',$syslog_system_facility) )
+      {
+        Sys::Syslog::syslog ($syslog_system_level, "%s", $message);
+        Sys::Syslog::closelog();
+      }
+    };
+    if ($@) {
+      warn "Cannot write to syslog: $@\n";
+      print "Cannot write to syslog.  Message to be logged: $message\n" if ($DEBUGGING >= 1);
     }
-  };
-  if ($@) {
-    warn "Cannot write to syslog: $@\n";
-    print "Cannot write to syslog.  Message to be logged: $message\n" if ($DEBUGGING >= 1);
+  }
+  else {  # Log::Syslog::Fast
+    my $protocol = ($syslog_remote_proto eq "UDP" ? LOG_UDP : LOG_TCP);
+    eval {
+      if (my $logger = Log::Syslog::Fast->new($protocol, $syslog_remote_dest, $syslog_remote_port, get_facility($syslog_system_facility), 
+        get_severity($syslog_system_level), $snmptt_system_name, $syslog_system_app))
+      {
+        if ($syslog_rfc_format == 1) {
+          $logger->set_format(LOG_RFC3164_LOCAL);
+        }
+        elsif ($syslog_rfc_format == 2) {
+          $logger->set_format(LOG_RFC5424);
+        }
+        else {
+          $logger->set_format(LOG_RFC3164);
+        }
+        $logger->send($message);
+      }
+    };
+    warn "Cannot write to syslog: $@\n" if $@;
   }
 }
 
