@@ -78,7 +78,7 @@ net_snmp_perl_enable = 0
 net_snmp_perl_cache_enable = 1
 
 # This sets the best_guess parameter used by the UCD-SNMP / NET-SNMP Perl module for 
-# translating symbolic nams to OIDs and vice versa.
+# translating symbolic names to OIDs and vice versa.
 # For UCD-SNMP, and Net-SNMP 5.0.8 and previous versions, set this value to 0.
 # For Net-SNMP 5.0.9, or any Net-SNMP with patch 722075 applied, set this value to 2.
 # A value of 2 is equivalent to -IR on Net-SNMP command line utilities.
@@ -300,6 +300,15 @@ stdout_enable = 0
 # location
 log_enable = 1
 
+# Set to 1 to create key=value pairs for trap-OID, severity, category and
+# hostname for text logging and syslog.  Example:
+# Trap-OID=trap-OID Severity=severity Category=category Hostname=hostname 
+# instead of
+# trap-OID severity category hostname
+log_key_names = 1
+
+$message = "$receivedtrap_trans $event2[2] \"$event2[1]\" $agent_dns_name - $message_short\n";
+
 # Log file location.  The COMPLETE path and filename.  Ex: '/var/log/snmptt/snmptt.log'
 log_file = /var/log/snmptt/snmptt.log
 
@@ -339,9 +348,43 @@ unknown_trap_nodes_match_mode = 0
 # 24 hours = 86400
 statistics_interval = 0
 
-# Set to 1 to enable logging of *TRAPS* to syslog.  If you do not have the Sys::Syslog
-# module then disable this.  Windows users should disable this.
+##########################################################
+# Syslog - common
+
+# Set to 0 to use the Sys::Syslog module which allows for logging to the local 
+# syslog via Unix sockets.  Remote syslog servers are not supported.
+# Set to 1 to use the Log::Syslog::Fast module for logging to remote systems
+# over UDP or TCP using RFC3164 or the newer RFC5424 which supports additional
+# fields.
+syslog_module = 0
+
+# Remote syslog server hostname or IP address when. Requires syslog_module = 1.
+syslog_remote_dest = 127.0.0.1
+
+# Remote syslog server UDP/TCP port.  Requires syslog_module = 1.
+syslog_remote_port = 514
+
+# Remote syslog server protocol to use (UDP or TCP). Requires syslog_module = 1.
+# Note:  If TCP is selected and the remote server is not responding, this will
+#        block snmptt from processing additional traps until the connection
+#        times out.
+syslog_remote_proto = UDP
+
+# Remote syslog format.  Set to 0 for LOG_RFC3164 (default), 1 for
+# LOG_RFC3164_LOCAL (hostname is not sent) or 2 for LOG_RFC5424.
+syslog_rfc_format = 0
+
+# Syslog - common
+##########################################################
+# Syslog - traps
+
+# Set to 1 to enable logging of *TRAPS* to syslog.  If you do not have the 
+# Sys::Syslog or Log::Syslog::Fast modules then disable this.  
+# Windows users should disable this.
 syslog_enable = 1
+
+# Remote syslog 'app' name when using LOG_RFC5424.
+syslog_app = snmptt
 
 # Syslog facility to use for logging of *TRAPS*.  For example: 'local0'
 syslog_facility = local0
@@ -371,9 +414,16 @@ END
 # Valid values: emerg, alert, crit, err, warning, notice, info, debug 
 syslog_level = warning
 
+# Syslog
+##########################################################
+# Syslog system
+
 # Set to 1 to enable logging of *SNMPTT system errors* to syslog.  If you do not have the 
 # Sys::Syslog module then disable this.  Windows users should disable this.
 syslog_system_enable = 1
+
+# Remote syslog 'app' name when using LOG_RFC5424.
+syslog_system_app = snmptt-sys
 
 # Syslog facility to use for logging of *SNMPTT system errors*.  For example: 'local0'
 syslog_system_facility = local0
@@ -381,6 +431,9 @@ syslog_system_facility = local0
 # Syslog level to use for logging of *SNMPTT system errors*..  For example: 'warning'
 # Valid values: emerg, alert, crit, err, warning, notice, info, debug 
 syslog_system_level = warning
+
+# Syslog system
+##########################################################
 
 [SQL]
 # Determines if the enterprise column contains the numeric OID or symbolic OID
